JSDOMIterator forEach should support second optional parameter https://bugs.webkit.org/show_bug.cgi?id=159020

Patch by Youenn Fablet <youennf@gmail.com> on 2016-06-22
Reviewed by Chris Dumez.

Source/WebCore:

Covered by beefed up test.

* bindings/js/JSDOMIterator.h:
(WebCore::iteratorForEach): Setting callback thisValue to the second argument passed to forEach.

LayoutTests:

* fast/dom/nodeListIterator-expected.txt:
* fast/dom/nodeListIterator.html: Adding 'thisValue' various checks.

Canonical link: https://commits.webkit.org/177101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202334 268f45cc-cd09-0410-ab3c-d52691b4dbfc